--- a/package.json
+++ b/package.json
@@ -11,17 +11,25 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "20.6.0",
+    "@types/nodemailer": "^6.4.10",
     "@types/react": "18.2.19",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "bcrypt": "^5.1.1",
+    "brcypt": "^1.0.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "formik": "^2.4.4",
+    "mongoose": "^7.5.1",
     "next": "13.4.19",
+    "next-auth": "^0.0.0-manual.ffd05533",
+    "nodemailer": "^6.9.5",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "yup": "^1.2.0"
