Auth Routes +UI

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 NEXT_PUBLIC_MONGO_URL=mongodb+srv://muqeet:1234@cluster0.4bljo5t.mongodb.net/
 AUTH_SECRET=x2qlg7zc0hnka7z5jccmxwn3f1hsmwgz
+
+
+NEXT_PUBLIC_PASSWORD_RESET_URL=http://localhost:3000/auth/reset-password
+NEXTAUTH_URL=http://localhost:3000
