Mail trap updated

--- a/.env
+++ b/.env
@@ -3,4 +3,6 @@ AUTH_SECRET=x2qlg7zc0hnka7z5jccmxwn3f1hsmwgz
 
 
 NEXT_PUBLIC_PASSWORD_RESET_URL=http://localhost:3000/auth/reset-password
+NEXT_PUBLIC_SIGNIN_URL=http://localhost:3000/auth/signin
+NEXT_PUBLIC_VERIFICATION_URL=http://localhost:3000/verify
 NEXTAUTH_URL=http://localhost:3000
