--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "eslint-config-next": "13.4.19",
     "formik": "^2.4.4",
     "mongoose": "^7.5.1",
-    "next": "13.4.19",
+    "next": "^13.5.6",
     "next-auth": "^0.0.0-manual.ffd05533",
     "nodemailer": "^6.9.5",
     "postcss": "8.4.29",
@@ -31,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3",
+    "truncate": "^3.0.0",
     "typescript": "5.2.2",
     "yup": "^1.2.0"
   }
